# hr-osc

./: .gitignore  Cargo.toml  README.md  app.go  config.go  go.mod  go.sum  index.html  main.go  osc-server.go  package-lock.json  package.json  pulsoid-client.go  stromno-client.go  types.go  utils.go  vite.config.ts  wails.json  ws-receiver.go
.github/workflows/: codeql-analysis.yml
client/: client.go  config.go  stromno-client.go  ws-receiver.go
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  package.json.md5  rollup.config.js  vite.config.js
frontend/src/: App.svelte  global.css  index.css  routes.js  vite-env.d.ts
frontend/src/components/: Error.svelte  Loading.svelte  Main.svelte  Settings.svelte  SmallError.svelte  TopHeader.svelte  TopMenu.svelte  Update.svelte  WS.svelte  WidgetIdInput.svelte
frontend/src/components/tabs/: Tab.svelte  TabList.svelte  TabPanel.svelte  Tabs.svelte
frontend/src/pages/: About.svelte  Main.svelte  Settings.svelte  WidgetId.svelte
frontend/src/utils/: stores.js
frontend/wailsjs/go/: bindings.d.ts  bindings.js
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_server.rs  main.rs  osc.rs
src/components/: HttpService.tsx  Loading.tsx  NavBar.tsx  WebSocketService.tsx
src/components/settings/: General.tsx  Http.tsx  OSC.tsx  Parameters.tsx  Stromno.tsx
src/hooks/: useSelect.tsx  useUpdate.tsx  useWebSocket.tsx
src/lib/: config.ts  http_server.ts  osc.ts  service.ts  states.ts  stromno.ts  utils.ts
src/routes/: About.tsx  Home.tsx  Settings.tsx
